--- a/index.html
+++ b/index.html
@@ -85,8 +85,11 @@
                     Ayawen <span class="text-blue-500">Asuinura</span>
                 </h1>
                 <p class="text-xl md:text-2xl text-slate-400 max-w-3xl font-light leading-relaxed">
-                    Facilitating <span class="text-white font-semibold">Operational Alpha</span> and market displacement for <span class="text-orange-500 font-semibold italic">Lantern.ai</span>. 
-                    Not just a hire, but a <span class="underline decoration-blue-500 underline-offset-8">market expansion engine</span>.
+                    Facilitating <span class="text-white font-semibold">Operational Alpha</span> and market displacement for <span class="text-orange-500 font-semibold italic">Lantern.ai</span>.
+                    <br><br>
+                    In applying to this role I could have written a cover letter to tell you I am "passionate" and "driven" and a ✨team player✨. 
+                    <br><br>
+                    Or I could just show you exactly what you'll be getting with me.
                 </p>
             </div>
         </div>
